리스/렌트 견적시스템 > 렌트견적 화면 작업

--- a/src/assets/scss/components/ui/form/BoxCheckList.scss
+++ b/src/assets/scss/components/ui/form/BoxCheckList.scss
@@ -68,6 +68,15 @@
         }
       }
 
+      &.box-check-list--align-full {
+        .box-check-list__item {
+          & + .box-check-list__item {
+            margin-left: 0;
+            margin-top: 6px;
+          }
+        }
+      }
+
       &.box-check-list--wrap {
         .box-check-list {
           &__list {
