--- a/src/assets/scss/components/ui/form/CheckBox.scss
+++ b/src/assets/scss/components/ui/form/CheckBox.scss
@@ -15,6 +15,10 @@
     align-items: flex-start;
     vertical-align: top;
     @include font-size-default(16);
+
+    .checkbox__input[disabled] + & {
+      cursor: default;
+    }
   }
 
   &__object {
@@ -32,6 +36,7 @@
       border: 1px solid $color-gray-30;
       border-radius: 50%;
       outline: 0 solid rgba($color-navy-50, 0);
+      background-color: rgba($color-white, 1);
       transition: border-color 0.2s, background-color 0.2s, outline 0.2s;
 
       svg {
@@ -234,8 +239,9 @@
       }
 
       .checkbox__input[disabled] + .checkbox__label .checkbox__object-inner {
-        border-color: rgba($color-white, 0.25);
-        background-color: rgba($color-black, 0.05);
+        opacity: 0.5;
+        border-color: $color-white;
+        background-color: rgba($color-black, 0.2);
 
         svg {
           * {
