검수사항 일부 진행

--- a/src/assets/scss/views/registDocument/LayerRegistDocumentList.scss
+++ b/src/assets/scss/views/registDocument/LayerRegistDocumentList.scss
@@ -1,2 +1,3 @@
 @import '@/assets/scss/components/import/add-button.scss';
 @import '@/assets/scss/components/import/basic-list.scss';
+@import '@/assets/scss/components/import/tooltip-section.scss';
