--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -223,7 +223,7 @@ body,
 
 .text-caption-1.text-caption-1 {
   margin: 0;
-  @include font-size-head(11);
+  @include font-size-default(11);
 }
 
 // font-weight
@@ -297,6 +297,17 @@ body,
   &--line-3 {
     -webkit-line-clamp: 3;
     max-height: #{$line-height-default * 3}em;
+  }
+
+  &.text-title-1,
+  &.text-title-2 {
+    max-height: #{$line-height-head * 2}em;
+
+    .multi-ellipsis {
+      &--line-3 {
+        max-height: #{$line-height-head * 3}em;
+      }
+    }
   }
 }
 
