--- a/src/assets/scss/components/import/bank-brand.scss
+++ b/src/assets/scss/components/import/bank-brand.scss
@@ -58,10 +58,12 @@
     @include font-size-default(14);
   }
 
-  &--col-2 {
-    .bank-brand {
-      &__item {
-        width: 50%;
+  &--col {
+    &-2 {
+      .bank-brand {
+        &__item {
+          width: 50%;
+        }
       }
     }
   }
