--- a/src/assets/scss/components/ui/form/BoxCheckList.scss
+++ b/src/assets/scss/components/ui/form/BoxCheckList.scss
@@ -95,26 +95,28 @@
     }
   }
 
-  &--col-3 {
-    .box-check-list {
-      &__item {
-        width: 33.333333%;
+  &--col {
+    &-3 {
+      .box-check-list {
+        &__item {
+          width: 33.333333%;
+        }
       }
     }
-  }
 
-  &--col-4 {
-    .box-check-list {
-      &__item {
-        width: 25%;
+    &-4 {
+      .box-check-list {
+        &__item {
+          width: 25%;
+        }
       }
     }
-  }
 
-  &--col-6 {
-    .box-check-list {
-      &__item {
-        width: 16.666666%;
+    &-6 {
+      .box-check-list {
+        &__item {
+          width: 16.666666%;
+        }
       }
     }
   }
