[리스/렌트 견적시스템 (영업용) > 공통] 작업중

--- a/src/assets/scss/components/import/estimate-list.scss
+++ b/src/assets/scss/components/import/estimate-list.scss
@@ -28,6 +28,10 @@
     @include font-size-default(15);
   }
 
+  &__list {
+    @include reset-list;
+  }
+
   &__item {
     & + & {
       border-top: 1px solid $color-gray-20;
