--- a/src/assets/scss/views/uiGuide/GuideComponentModule.scss
+++ b/src/assets/scss/views/uiGuide/GuideComponentModule.scss
@@ -40,3 +40,4 @@
 @import '@/assets/scss/components/import/estimate-list.scss';
 @import '@/assets/scss/components/import/upload-file.scss';
 @import '@/assets/scss/components/import/status-inquiry.scss';
+@import '@/assets/scss/components/import/share-list.scss';
