--- a/src/assets/scss/components/ui/banner/SlideBanner.scss
+++ b/src/assets/scss/components/ui/banner/SlideBanner.scss
@@ -13,11 +13,15 @@
   &__contents {
     flex: 1;
     min-width: 0;
+    position: relative;
+    z-index: 10;
   }
 
   &__thumb {
     flex: none;
     margin: -30px -20px -30px 0;
+    position: relative;
+    z-index: 0;
 
     &-img {
       width: 122px;
