--- a/src/assets/scss/components/ui/banner/SlideBanner.scss
+++ b/src/assets/scss/components/ui/banner/SlideBanner.scss
@@ -39,6 +39,7 @@
     @include reset-button;
     display: block;
     position: absolute;
+    z-index: 20;
     top: 0;
     left: 0;
     width: 100%;
