contentButton theme 추가

--- a/src/assets/scss/components/ui/button/ContentsButton.scss
+++ b/src/assets/scss/components/ui/button/ContentsButton.scss
@@ -34,4 +34,22 @@
       @include for-a11y;
     }
   }
+
+  &--theme {
+    &-secondary {
+      .contents-button__content {
+        padding: 16px;
+      }
+
+      .contents-button__button {
+        border-color: transparent;
+
+        &:hover,
+        &:active,
+        &:focus-visible {
+          border-color: $color-navy-50;
+        }
+      }
+    }
+  }
 }
