Estimate List disabled 타입 추가

--- a/src/assets/scss/components/import/estimate-list.scss
+++ b/src/assets/scss/components/import/estimate-list.scss
@@ -114,4 +114,27 @@
     margin-left: -20px;
     margin-right: -20px;
   }
+
+  &--disabled {
+    .estimate-list__list {
+      position: relative;
+
+      &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-color: rgba($color-white, 0.5);
+        z-index: 20;
+      }
+    }
+
+    .estimate-list__top + .estimate-list__list {
+      &::before {
+        top: -56px;
+      }
+    }
+  }
 }
