영업용(리스/렌트 견적시스템) > 신차 > 선구매, 영업용(리스/렌트 견적시스템) > 중고차 > 리스견적 및 자체 검수

--- a/src/assets/scss/views/LeaseRentEstimationSystem/LeaseRentEstimationSystemPrePurchaseRegistCar.scss
+++ b/src/assets/scss/views/LeaseRentEstimationSystem/LeaseRentEstimationSystemPrePurchaseRegistCar.scss
@@ -17,7 +17,7 @@
   background-color: $color-gray-15;
 }
 
-.product-detail {
+.product-setting {
   display: flex;
 
   &__title {
@@ -26,7 +26,7 @@
     @include font-size-default(13);
     color: $color-gray-70;
 
-    & + .product-detail__contents {
+    & + .product-setting__contents {
       flex: 1;
       margin-left: 8px;
     }
