--- a/src/assets/scss/views/LeaseRentEstimationSystem/LeaseRentEstimationSystemUsedLease.scss
+++ b/src/assets/scss/views/LeaseRentEstimationSystem/LeaseRentEstimationSystemUsedLease.scss
@@ -3,17 +3,8 @@
 @import '@/assets/scss/components/import/loading-icon.scss';
 @import '@/assets/scss/components/import/notice-section.scss';
 @import '@/assets/scss/components/import/basic-list.scss';
-@import '@/assets/scss/components/import/option-select.scss';
 @import '@/assets/scss/components/import/empty.scss';
 @import '@/assets/scss/components/import/check-list.scss';
-
-.color-etc {
-  margin-left: 27px;
-}
-
-.car-amount {
-  margin-left: 30px;
-}
 
 .total {
   margin: 40px -20px 0;
@@ -38,6 +29,23 @@
   &--accordion-animate {
     :global(.swiper-wrapper) {
       height: auto !important;
+    }
+  }
+}
+
+.product-setting {
+  display: flex;
+  align-items: center;
+
+  &__title {
+    flex: none;
+    min-width: 48px;
+    @include font-size-default(13);
+    color: $color-gray-70;
+
+    & + .product-setting__contents {
+      flex: 1;
+      margin-left: 8px;
     }
   }
 }
