--- a/src/assets/scss/components/import/board-detail.scss
+++ b/src/assets/scss/components/import/board-detail.scss
@@ -9,6 +9,28 @@
     padding-bottom: 30px;
     border-bottom: 1px solid $color-gray-20;
     margin-bottom: 30px;
+
+    &--flex {
+      display: flex;
+    }
+  }
+
+  &__head-block {
+    flex: 1;
+    min-width: 0;
+  }
+
+  &__head-icon {
+    flex: none;
+    width: 24px;
+    height: 24px;
+    margin-left: 8px;
+
+    svg {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
   }
 
   &__category {
@@ -42,6 +64,29 @@
     @include font-size-default(13);
     color: $color-gray-70;
     font-weight: 300;
+
+    &-list {
+      display: flex;
+      align-items: center;
+    }
+
+    &-item + &-item {
+      position: relative;
+      padding-left: 13px;
+
+      &::before {
+        content: '';
+        display: block;
+        position: absolute;
+        z-index: 1;
+        top: 50%;
+        left: 6px;
+        margin-top: -6px;
+        width: 1px;
+        height: 12px;
+        background-color: $color-gray-30;
+      }
+    }
   }
 
   &__contents {
