--- a/src/assets/scss/views/LeaseRentEstimationSystem/LeaseRentEstimationSystemPrePurchaseChooseCar.scss
+++ b/src/assets/scss/views/LeaseRentEstimationSystem/LeaseRentEstimationSystemPrePurchaseChooseCar.scss
@@ -1,23 +1,1 @@
-.car-select {
-  position: relative;
-
-  &::before {
-    content: '';
-    display: table;
-  }
-
-  &__list {
-    @include reset-list;
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  &__item {
-    width: 50%;
-    text-align: center;
-  }
-
-  &__img {
-    margin: 0 auto;
-  }
-}
+@import '@/assets/scss/components/import/bank-brand.scss';
