--- a/src/assets/scss/components/import/bank-brand.scss
+++ b/src/assets/scss/components/import/bank-brand.scss
@@ -21,6 +21,7 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
+    align-items: stretch;
     justify-content: flex-start;
     text-align: center;
     padding: 10px 14px;
@@ -54,7 +55,6 @@
   &__text {
     flex: none;
     display: block;
-    width: 100%;
     @include font-size-default(14);
   }
 
