기본 슬라이드 배너 추가
자동차 브랜드 셀렉트 추가
헤더 버튼 케이스 추가

--- a/src/assets/scss/layouts/DefaultHeader.scss
+++ b/src/assets/scss/layouts/DefaultHeader.scss
@@ -136,6 +136,16 @@
     }
   }
 
+  &__round-button {
+    flex: none;
+    margin: -1px 0;
+  }
+
+  &__button + &__round-button,
+  &__round-button + &__button {
+    margin-left: 12px;
+  }
+
   &__app {
     flex: none;
     margin: -1px 12px -1px 0;
