배너 슬라이드 스타일 우선순위 수정

--- a/src/assets/scss/components/ui/banner/BasicBannerSlide.scss
+++ b/src/assets/scss/components/ui/banner/BasicBannerSlide.scss
@@ -2,15 +2,21 @@
   display: block;
 
   &__block {
-    padding-bottom: 38px;
+    &.banner__block {
+      padding-bottom: 38px;
+    }
   }
 
   &__thumb {
-    margin-bottom: -38px;
+    &.banner__thumb {
+      margin-bottom: -38px;
+    }
 
     &-img {
-      width: 124px;
-      height: 104px;
+      &.banner__thumb-img {
+        width: 124px;
+        height: 104px;
+      }
     }
   }
 
