--- a/src/assets/scss/components/ui/common/BasicBox.scss
+++ b/src/assets/scss/components/ui/common/BasicBox.scss
@@ -48,10 +48,10 @@
       background-color: $color-blue-50;
     }
 
-    &-denary {
+    &-duodenary {
       border-radius: 12px;
-      border-color: $color-green-50;
-      background-color: $color-green-50;
+      border-color: $color-navy-05;
+      background-color: $color-navy-05;
     }
   }
 }
