--- a/src/assets/scss/views/uiGuide/GuideComponentModule.scss
+++ b/src/assets/scss/views/uiGuide/GuideComponentModule.scss
@@ -41,3 +41,4 @@
 @import '@/assets/scss/components/import/upload-file.scss';
 @import '@/assets/scss/components/import/status-inquiry.scss';
 @import '@/assets/scss/components/import/share-list.scss';
+@import '@/assets/scss/components/import/file-list.scss';
