--- a/src/assets/scss/components/import/share-list.scss
+++ b/src/assets/scss/components/import/share-list.scss
@@ -32,6 +32,10 @@
     width: 48px;
     height: 48px;
     margin: 0 auto 8px;
+    padding: 6px;
+    background-color: $color-gray-10;
+    border-radius: 16px;
+    box-sizing: border-box;
 
     svg {
       display: block;
