--- a/src/assets/scss/components/ui/common/IllustObject.scss
+++ b/src/assets/scss/components/ui/common/IllustObject.scss
@@ -33,5 +33,8 @@
     &-capital {
       background-image: url('@/assets/images/illustration/img-logo.png');
     }
+    &-rental {
+      background-image: url('@/assets/images/illustration/img-rental.png');
+    }
   }
 }
