--- a/src/assets/scss/views/main/MainHome.scss
+++ b/src/assets/scss/views/main/MainHome.scss
@@ -254,11 +254,12 @@
   }
 
   &__image {
-    width: 140px;
-    height: 140px;
+    width: 100%;
+    max-width: 272px;
+    height: auto;
     margin: 0 auto;
 
-    svg {
+    img {
       display: block;
       width: 100%;
       height: 100%;
