--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -254,6 +254,11 @@ body,
   text-align: center;
 }
 
+// italic
+.italic.italic {
+  font-style: italic;
+}
+
 // underline
 .underline.underline {
   text-decoration: underline;
