--- a/src/assets/scss/views/uiGuide/GuideComponentModule.scss
+++ b/src/assets/scss/views/uiGuide/GuideComponentModule.scss
@@ -42,3 +42,5 @@
 @import '@/assets/scss/components/import/status-inquiry.scss';
 @import '@/assets/scss/components/import/share-list.scss';
 @import '@/assets/scss/components/import/file-list.scss';
+@import '@/assets/scss/components/import/manual-qna.scss';
+@import '@/assets/scss/components/import/manual-check.scss';
