--- a/src/assets/scss/components/ui/common/IllustObject.scss
+++ b/src/assets/scss/components/ui/common/IllustObject.scss
@@ -102,5 +102,29 @@
     &-checklist {
       background-image: url('@/assets/images/illustration/img-checklist.png');
     }
+    &-credit {
+      background-image: url('@/assets/images/illustration/img-credit.png');
+    }
+    &-customer {
+      background-image: url('@/assets/images/illustration/img-customer.png');
+    }
+    &-feature {
+      background-image: url('@/assets/images/illustration/img-feature.png');
+    }
+    &-mean {
+      background-image: url('@/assets/images/illustration/img-mean.png');
+    }
+    &-faq {
+      background-image: url('@/assets/images/illustration/img-faq.png');
+    }
+    &-middlepay {
+      background-image: url('@/assets/images/illustration/img-middlepay.png');
+    }
+    &-graph {
+      background-image: url('@/assets/images/illustration/img-graph.png');
+    }
+    &-password {
+      background-image: url('@/assets/images/illustration/img-password.png');
+    }
   }
 }
