--- a/src/assets/scss/views/myLoan/LayerMyLoanOnlineContractDescription009_013.scss
+++ b/src/assets/scss/views/myLoan/LayerMyLoanOnlineContractDescription009_013.scss
@@ -1,50 +1,11 @@
 @import '@/assets/scss/components/import/basic-list.scss';
+@import '@/assets/scss/components/import/contents-list.scss';
 @import '@/assets/scss/components/import/basic-table.scss';
-@import '@/assets/scss/components/import/manual-qna.scss';
 @import '@/assets/scss/components/import/manual-check.scss';
-
-// .manual-graph-image {
-//   width: 100%;
-//   max-width: 320px;
-//   margin: 0 auto;
-
-//   img {
-//     display: block;
-//     width: 100%;
-//   }
-// }
-
-// .manual-image {
-//   width: 100%;
-//   max-width: 202px;
-
-//   img {
-//     display: block;
-//     width: 100%;
-//   }
-// }
 
 .blank-box {
   display: inline-block;
-  min-width: 14px;
+  min-width: 60px;
   vertical-align: bottom;
-  text-align: left;
-
-  &--regular {
-    min-width: 54px;
-  }
-
-  &--medium {
-    min-width: 60px;
-  }
+  text-align: center;
 }
-
-// .margin-right {
-//   &-mini {
-//     margin-right: 6px;
-//   }
-
-//   &-regular {
-//     margin-right: 20px;
-//   }
-// }
