디자인 검수사항 반영 및 scss 소스정리,수정

--- a/src/assets/scss/views/myLoan/LayerMyLoanOnlineContractDescription003_009.scss
+++ b/src/assets/scss/views/myLoan/LayerMyLoanOnlineContractDescription003_009.scss
@@ -15,16 +15,16 @@
 
 .blank-box {
   display: inline-block;
-  min-width: 14px;
+  min-width: 60px;
   vertical-align: bottom;
-  text-align: left;
+  text-align: center;
+
+  &--small {
+    min-width: 14px;
+  }
 
   &--regular {
     min-width: 54px;
-  }
-
-  &--medium {
-    min-width: 60px;
   }
 }
 
