--- a/src/assets/scss/components/ui/common/BasicBox.scss
+++ b/src/assets/scss/components/ui/common/BasicBox.scss
@@ -48,7 +48,13 @@
       background-color: $color-blue-50;
     }
 
-    &-duodenary {
+    &-denary {
+      border-radius: 12px;
+      border-color: $color-green-50;
+      background-color: $color-green-50;
+    }
+
+    &-undenary {
       border-radius: 12px;
       border-color: $color-navy-05;
       background-color: $color-navy-05;
