--- a/src/assets/scss/views/auto/AutoSuccession.scss
+++ b/src/assets/scss/views/auto/AutoSuccession.scss
@@ -3,32 +3,19 @@
 @import '@/assets/scss/components/import/icon-list.scss';
 @import '@/assets/scss/components/import/step.scss';
 @import '@/assets/scss/components/import/illustration-img.scss';
-@import '@/assets/scss/components/import/contents-list.scss';
 
 .bg {
   background-color: $color-navy-05;
   margin: -30px -20px 0 -20px;
-  padding: 1px 20px 40px 20px;
+  padding: 0 20px 40px 20px;
 }
 
-.icon-box {
+.top-tab {
+  margin-bottom: 30px;
+}
+
+.icon {
+  display: block;
   width: 36px;
   height: 36px;
-  font-size: 0;
-
-  svg {
-    display: block;
-    width: 100%;
-    height: 100%;
-  }
-}
-
-.icon-fill {
-  svg {
-    path {
-      &:last-child {
-        fill: $color-blue-60;
-      }
-    }
-  }
 }
