.color-green-secondary 추가

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -331,6 +331,9 @@ body,
 .color-green.color-green {
   color: $color-green-50;
 }
+.color-green-secondary.color-green-secondary {
+  color: $color-semantic-positive;
+}
 .color-red.color-red {
   color: $color-semantic-essential;
 }
