--- a/src/assets/scss/views/lmBlogPersonal/LMBlogPersonalHome.scss
+++ b/src/assets/scss/views/lmBlogPersonal/LMBlogPersonalHome.scss
@@ -1,4 +1,5 @@
 @import '@/assets/scss/components/import/basic-list.scss';
+@import '@/assets/scss/components/import/image-view.scss';
 
 .grid {
   display: grid;
