견적서 화면 작업 환경 추가

--- a/src/assets/scss/mixins.scss
+++ b/src/assets/scss/mixins.scss
@@ -223,18 +223,30 @@
 }
 
 // font-size
-@mixin font-size-default($size) {
-  font-size: rem($size);
+@mixin font-size-default($size, $unit: rem) {
+  @if $unit == px {
+    font-size: #{$size}px;
+  } @else {
+    font-size: rem($size);
+  }
   line-height: $line-height-default;
   letter-spacing: $letter-spacing-default;
 }
-@mixin font-size-head($size) {
-  font-size: rem($size);
+@mixin font-size-head($size, $unit: rem) {
+  @if $unit == px {
+    font-size: #{$size}px;
+  } @else {
+    font-size: rem($size);
+  }
   line-height: $line-height-head;
   letter-spacing: $letter-spacing-default;
 }
-@mixin font-size-button($size) {
-  font-size: rem($size);
+@mixin font-size-button($size, $unit: rem) {
+  @if $unit == px {
+    font-size: #{$size}px;
+  } @else {
+    font-size: rem($size);
+  }
   line-height: $line-height-button;
   letter-spacing: $letter-spacing-default;
 }
