--- a/src/assets/scss/components/import/document/est-table.scss
+++ b/src/assets/scss/components/import/document/est-table.scss
@@ -10,12 +10,11 @@ $color-black-01: #222;
 
   > tbody {
     th {
-      min-height: 28px;
-      padding: 4px;
+      padding: 0 4px;
       border-top: 1px solid $color-gray;
       border-left: 1px solid $color-gray;
       box-sizing: border-box;
-      background: #effbff;
+      background-color: #effbff;
       @include font-size-default(13, px);
       font-weight: 400;
       text-align: center;
@@ -25,7 +24,7 @@ $color-black-01: #222;
       }
     }
     td {
-      padding: 4px 8px;
+      padding: 0 8px;
       border-top: 1px solid $color-gray;
       border-left: 1px solid $color-gray;
       box-sizing: border-box;
@@ -47,16 +46,16 @@ $color-black-01: #222;
 
   > tfoot {
     th {
-      padding: 4px;
+      padding: 0 4px;
       border-top: 1px solid $color-green;
       box-sizing: border-box;
-      background: $color-gray-background !important;
+      background-color: $color-gray-background !important;
       @include font-size-default(13, px);
       font-weight: 700;
       text-align: center;
     }
     td {
-      padding: 4px 8px;
+      padding: 0 8px;
       border-top: 1px solid $color-green;
       box-sizing: border-box;
       border-left: 1px solid $color-gray;
@@ -70,7 +69,7 @@ $color-black-01: #222;
   &__basic {
     display: flex;
     justify-content: space-between;
-    padding: 10px 0 10px;
+    padding: 10px 0 4px;
     border-top: 3px solid #00aaaa;
   }
 
@@ -79,11 +78,11 @@ $color-black-01: #222;
   }
 
   &__amount-related {
-    background: #effbff !important;
+    background-color: #effbff !important;
   }
 
   &__total-related {
-    background: $color-gray-background !important;
+    background-color: $color-gray-background !important;
   }
 
   &__image {
@@ -114,7 +113,6 @@ $color-black-01: #222;
     tbody {
       th,
       td {
-        min-height: 34px;
         padding: 3px 0;
         color: $color-black-01;
         @include font-size-default(13, px);
@@ -163,16 +161,16 @@ $color-black-01: #222;
 
   &__emphasis {
     th {
-      padding: 4px;
+      padding: 0 4px;
       border-top: 1px solid $color-green;
       box-sizing: border-box;
-      background: $color-gray-background !important;
+      background-color: $color-gray-background !important;
       @include font-size-default(13, px);
       font-weight: 700;
       text-align: center;
     }
     td {
-      padding: 4px 8px;
+      padding: 0 8px;
       border-top: 1px solid $color-green;
       box-sizing: border-box;
       border-left: 1px solid $color-gray;
@@ -197,7 +195,7 @@ $color-black-01: #222;
     tbody {
       th {
         border-top: 1px solid $color-green;
-        background: $color-gray-background;
+        background-color: $color-gray-background;
       }
       td {
         border-top: 1px solid $color-green;
