--- a/src/assets/scss/views/personalLoan/PersonalLoanBusinessHouse.scss
+++ b/src/assets/scss/views/personalLoan/PersonalLoanBusinessHouse.scss
@@ -10,3 +10,9 @@
   margin: -30px -20px 0 -20px;
   padding: 30px 20px 40px 20px;
 }
+
+.block-start {
+  display: flex;
+  align-items: flex-start;
+  box-sizing: border-box;
+}
