--- a/src/assets/scss/views/document/DocumentEstimate004Contents.scss
+++ b/src/assets/scss/views/document/DocumentEstimate004Contents.scss
@@ -1,6 +1,10 @@
+@import '@/assets/scss/components/import/document/common.scss';
 @import '@/assets/scss/components/import/document/document-layout.scss';
 @import '@/assets/scss/components/import/document/document.scss';
 @import '@/assets/scss/components/import/document/est-head.scss';
 @import '@/assets/scss/components/import/document/est-name-card.scss';
 @import '@/assets/scss/components/import/document/est-car-info.scss';
 @import '@/assets/scss/components/import/document/est-table.scss';
+@import '@/assets/scss/components/import/document/est-section.scss';
+@import '@/assets/scss/components/import/document/est-layout.scss';
+@import '@/assets/scss/components/import/document/est-list.scss';
