--- a/src/assets/scss/components/import/product-detail.scss
+++ b/src/assets/scss/components/import/product-detail.scss
@@ -54,6 +54,10 @@
 
   &--small {
     .product-detail {
+      &__item {
+        align-items: flex-start;
+      }
+
       &__icon {
         width: 24px;
         height: 24px;
@@ -62,12 +66,14 @@
 
       &__block {
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         box-sizing: border-box;
+        margin-top: 2px;
       }
 
       &__title {
         flex: none;
+        margin-top: 1px;
         margin-right: 6px;
         color: $color-gray-70;
       }
@@ -76,6 +82,7 @@
         flex: 1;
         min-width: 0;
         @include font-size-default(14);
+        display: block;
       }
     }
   }
