--- a/src/assets/scss/components/ui/common/IllustObject.scss
+++ b/src/assets/scss/components/ui/common/IllustObject.scss
@@ -129,5 +129,8 @@
     &-password {
       background-image: url('@/assets/images/illustration/img-password.png');
     }
+    &-shield {
+      background-image: url('@/assets/images/illustration/img-shield.png');
+    }
   }
 }
