--- a/src/assets/scss/views/LeaseRentEstimationSystem/LeaseRentEstimationSystemInstallment.scss
+++ b/src/assets/scss/views/LeaseRentEstimationSystem/LeaseRentEstimationSystemInstallment.scss
@@ -5,6 +5,7 @@
 @import '@/assets/scss/components/import/basic-list.scss';
 @import '@/assets/scss/components/import/option-select.scss';
 @import '@/assets/scss/components/import/empty.scss';
+@import '@/assets/scss/components/import/document/document.scss';
 
 .color-etc {
   margin-left: 27px;
