--- a/src/assets/scss/views/LeaseRentEstimationSystem/LeaseRentEstimationSystemUsedLease.scss
+++ b/src/assets/scss/views/LeaseRentEstimationSystem/LeaseRentEstimationSystemUsedLease.scss
@@ -5,6 +5,7 @@
 @import '@/assets/scss/components/import/basic-list.scss';
 @import '@/assets/scss/components/import/empty.scss';
 @import '@/assets/scss/components/import/check-list.scss';
+@import '@/assets/scss/components/import/document/document.scss';
 
 .total {
   margin: 40px -20px 0;
