--- a/src/assets/scss/views/business/BF_M05_l020.scss
+++ b/src/assets/scss/views/business/BF_M05_l020.scss
@@ -1,3 +1,4 @@
 @import '@/assets/scss/components/import/basic-table.scss';
 @import '@/assets/scss/components/import/basic-list.scss';
 @import '@/assets/scss/components/import/notice-section.scss';
+@import '@/assets/scss/components/import/document/document.scss';
