--- a/src/assets/scss/components/ui/common/BasicBox.scss
+++ b/src/assets/scss/components/ui/common/BasicBox.scss
@@ -59,5 +59,9 @@
       border-color: $color-navy-05;
       background-color: $color-navy-05;
     }
+
+    &-duodenary {
+      border-radius: 12px;
+    }
   }
 }
