--- a/src/assets/scss/components/ui/common/IllustObject.scss
+++ b/src/assets/scss/components/ui/common/IllustObject.scss
@@ -129,6 +129,9 @@
     &-password {
       background-image: url('@/assets/images/illustration/img-password.png');
     }
+    &-waiting {
+      background-image: url('@/assets/images/illustration/waiting.png');
+    }
     &-shield {
       background-image: url('@/assets/images/illustration/img-shield.png');
     }
