--- a/src/assets/scss/views/main/Main_M09_p001.scss
+++ b/src/assets/scss/views/main/Main_M09_p001.scss
@@ -1,26 +1,16 @@
 @import '@/assets/scss/components/import/icon-list.scss';
 
-.products {
+.slide {
   margin: 0 -20px;
   overflow: hidden;
 
-  .estimate-list {
-    margin-left: 6px;
-    margin-right: 6px;
+  &__block {
+    margin: 0 4px;
+    padding-bottom: 1px;
   }
 
   :global(.swiper) {
-    padding: 0 14px;
+    padding: 0 16px;
     overflow: visible;
   }
-
-  &--accordion-animate {
-    :global(.swiper-wrapper) {
-      height: auto !important;
-    }
-  }
-}
-
-.status-box {
-  padding: 4px 8px !important;
 }
