메인 v1.4 설계서 반영

--- a/src/assets/scss/components/ui/common/BasicBox.scss
+++ b/src/assets/scss/components/ui/common/BasicBox.scss
@@ -36,6 +36,7 @@
       padding: 11px 15px;
     }
 
+    /*
     &-octonary {
       border-radius: 12px;
       border-color: $color-white;
@@ -53,6 +54,7 @@
       border-color: $color-green-50;
       background-color: $color-green-50;
     }
+    */
 
     &-undenary {
       border-radius: 12px;
