--- a/src/assets/scss/components/ui/banner/SlideBanner.scss
+++ b/src/assets/scss/components/ui/banner/SlideBanner.scss
@@ -4,10 +4,10 @@
   &__block {
     position: relative;
     box-sizing: border-box;
-    padding: 30px 20px 46px 40px;
+    padding: 24px 20px 42px 40px;
     display: flex;
     align-items: flex-start;
-    min-height: 122px;
+    min-height: 112px;
   }
 
   &__contents {
@@ -19,13 +19,13 @@
 
   &__thumb {
     flex: none;
-    margin: -30px -20px -30px 0;
+    margin: -20px 0 -38px;
     position: relative;
     z-index: 0;
 
     &-img {
-      width: 122px;
-      height: 122px;
+      width: 124px;
+      height: 104px;
 
       img {
         display: block;
@@ -55,7 +55,7 @@
     position: absolute;
     z-index: 10;
     left: 40px;
-    bottom: 30px;
+    bottom: 24px;
     font-size: 0;
     line-height: 0;
     text-align: center;
