--- a/src/assets/scss/components/import/board-detail.scss
+++ b/src/assets/scss/components/import/board-detail.scss
@@ -9,6 +9,11 @@
     padding-bottom: 30px;
     border-bottom: 1px solid $color-gray-20;
     margin-bottom: 30px;
+
+    &--noline {
+      padding-bottom: 0;
+      border-bottom: none;
+    }
   }
 
   &__category {
