--- a/src/assets/scss/variable.scss
+++ b/src/assets/scss/variable.scss
@@ -5,6 +5,7 @@ $page-min-width: 280px;
 $font-default: '맑은고딕', 'Malgun Gothic', '돋움', Dotum, 'Apple Gothic',
   sans-serif;
 $font-spoqa-han-sans-neo: 'Spoqa Han Sans Neo';
+$font-password: 'password';
 
 // colors
 $color-black: #15181f;
