--- a/src/assets/scss/views/company/CompanyBusinessAreas.scss
+++ b/src/assets/scss/views/company/CompanyBusinessAreas.scss
@@ -31,29 +31,28 @@
 }
 
 .nation {
-  display: flex;
-  padding: 20px;
+  display: block;
+  color: inherit;
+  text-decoration: none;
+  padding: 20px 100px 20px 20px;
   border-radius: 12px;
-  background-color: $color-navy-05;
-
-  &__left {
-    flex: 1;
-    min-width: 0;
-  }
-
-  &__right {
-    flex: none;
-    margin-left: 16px;
-  }
+  background: url('@/assets/images/contents/sinarmas-finance.png') no-repeat
+    100% 50% / auto 86px $color-navy-05;
 
   &__sub {
+    display: block;
     @include font-size-default(13);
     color: $color-gray-70;
     margin-bottom: 2px;
   }
 
   &__title {
+    display: block;
     @include font-size-default(16);
     font-weight: 500;
+  }
+
+  &--secondary {
+    background-image: url('@/assets/images/contents/micro-finance.png');
   }
 }
