--- a/src/assets/scss/views/equipmentLease/EquipmentLeaseStateInternalMemo.scss
+++ b/src/assets/scss/views/equipmentLease/EquipmentLeaseStateInternalMemo.scss
@@ -1,2 +1,3 @@
 @import '@/assets/scss/components/import/icon-list.scss';
 @import '@/assets/scss/components/import/status-inquiry.scss';
+@import '@/assets/scss/components/import/empty.scss';
