--- a/src/assets/scss/components/ui/form/SwitchCheckBox.scss
+++ b/src/assets/scss/components/ui/form/SwitchCheckBox.scss
@@ -26,7 +26,7 @@
       height: 22px;
       background-color: $color-white;
       border-radius: 50%;
-      transition: transform 0.2s;
+      transition: transform 0.2s, background-color 0.2s;
     }
   }
 
@@ -51,7 +51,22 @@
 
     &[disabled] + .switch-checkbox__label {
       .switch-checkbox__object {
-        opacity: 0.3;
+        background-color: $color-gray-30;
+
+        &::after {
+          background-color: $color-gray-10;
+        }
+      }
+    }
+
+    &[disabled]:checked + .switch-checkbox__label {
+      .switch-checkbox__object {
+        opacity: 0.5;
+        background-color: $color-navy-50;
+
+        &::after {
+          transform: translateX(18px);
+        }
       }
     }
   }
