수정사항 및 추가사항 반영

--- a/src/assets/scss/components/ui/common/BasicBox.scss
+++ b/src/assets/scss/components/ui/common/BasicBox.scss
@@ -36,13 +36,12 @@
       padding: 11px 15px;
     }
 
-    /*
     &-octonary {
       border-radius: 12px;
-      border-color: $color-white;
-      background-color: $color-white;
+      border-color: rgba($color-white, 0.2);
     }
 
+    /*
     &-nonary {
       border-radius: 12px;
       border-color: $color-blue-50;
