--- a/src/assets/scss/views/main/MainMyLoanEmpty.scss
+++ b/src/assets/scss/views/main/MainMyLoanEmpty.scss
@@ -1,6 +1,6 @@
 @import '@/assets/scss/components/import/icon-list.scss';
 @import '@/assets/scss/components/import/illustration-img.scss';
 
-.page-head {
-  padding: 0 20px;
+.page-body {
+  padding-top: 0;
 }
