--- a/src/assets/scss/components/ui/layer/FullPopup.scss
+++ b/src/assets/scss/components/ui/layer/FullPopup.scss
@@ -69,17 +69,6 @@
       flex: none;
       display: flex;
       align-items: center;
-      /*
-      max-width: 40%;
-
-      @include media-mobile-small {
-        max-width: 30%;
-      }
-
-      @include media-mobile-mini {
-        max-width: 24%;
-      }
-      */
     }
   }
 
@@ -89,6 +78,7 @@
     margin: 0;
     @include font-size-default(16);
     font-weight: 500;
+    text-align: center;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
