--- a/src/assets/scss/components/ui/form/BasicInput.scss
+++ b/src/assets/scss/components/ui/form/BasicInput.scss
@@ -26,6 +26,7 @@
 
     &[disabled] {
       color: $color-gray-40;
+      -webkit-text-fill-color: $color-gray-40;
     }
 
     &::-webkit-input-placeholder {
