--- a/src/assets/scss/components/ui/gnb/GlobalNav.scss
+++ b/src/assets/scss/components/ui/gnb/GlobalNav.scss
@@ -106,3 +106,56 @@
     @include font-size-default(14);
   }
 }
+
+.top-notice {
+  margin-bottom: 32px;
+
+  &__block {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: inherit;
+    border-radius: 8px;
+    padding: 12px 16px;
+    background-color: $color-navy-05;
+  }
+
+  &__icon {
+    flex: none;
+    display: block;
+    width: 24px;
+    height: 24px;
+    margin-right: 8px;
+
+    svg {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  &__text {
+    flex: 1;
+    min-width: 0;
+    display: block;
+    @include font-size-default(13);
+  }
+
+  &__arrow {
+    flex: none;
+    display: block;
+    width: 14px;
+    height: 14px;
+    margin-left: 8px;
+
+    svg {
+      display: block;
+      width: 100%;
+      height: 100%;
+
+      * {
+        fill: $color-gray-60;
+      }
+    }
+  }
+}
