--- a/src/assets/scss/components/ui/form/BasicDatepicker.scss
+++ b/src/assets/scss/components/ui/form/BasicDatepicker.scss
@@ -88,6 +88,10 @@
       &:focus-visible {
         outline: 1px dotted;
       }
+
+      &[disabled] {
+        cursor: default;
+      }
     }
     .duet-date__dialog {
       z-index: 999999;
