--- a/src/assets/scss/views/LeaseRentEstimationSystem/LeaseRentEstimationSystemSaveReview.scss
+++ b/src/assets/scss/views/LeaseRentEstimationSystem/LeaseRentEstimationSystemSaveReview.scss
@@ -16,3 +16,7 @@
   border-top: 1px solid $color-gray-20;
   padding-top: 20px;
 }
+
+.text-button-area {
+  min-height: #{$line-height-default}em;
+}
