--- a/src/assets/scss/components/ui/form/BasicInput.scss
+++ b/src/assets/scss/components/ui/form/BasicInput.scss
@@ -11,6 +11,7 @@
     @include reset-input-text;
     width: 100%;
     @include font-size-head(18);
+    letter-spacing: 0;
     height: #{$line-height-head}em;
 
     &,
