--- a/src/assets/scss/components/ui/form/BasicTextarea.scss
+++ b/src/assets/scss/components/ui/form/BasicTextarea.scss
@@ -25,6 +25,7 @@
       width: 100%;
       height: 100%;
       @include font-size-head(18);
+      letter-spacing: 0;
       outline: none;
 
       &[disabled] {
