--- a/src/assets/scss/components/ui/form/PartInput.scss
+++ b/src/assets/scss/components/ui/form/PartInput.scss
@@ -29,6 +29,7 @@
     @include reset-input-text;
     width: 100%;
     @include font-size-head(18);
+    letter-spacing: 0;
     height: #{$line-height-head}em;
 
     &[disabled] {
