--- a/src/assets/scss/components/ui/form/BasicInput.scss
+++ b/src/assets/scss/components/ui/form/BasicInput.scss
@@ -11,7 +11,6 @@
     @include reset-input-text;
     width: 100%;
     @include font-size-head(18);
-    letter-spacing: 0;
     height: #{$line-height-head}em;
 
     &,
@@ -23,6 +22,7 @@
     }
     &--align-right {
       text-align: right;
+      letter-spacing: 1px;
     }
 
     &[disabled] {
